[package]
name = "wiki-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.14"
rusqlite = { version = "0.31.0", features = ["bundled"] }
either = "1.10.0"
hhmmss = "0.1.0"
url-escape = "0.1.1"
num-format = "0.4.4"
tokio = "1.36.0"

[profile.release]
opt-level = 3